deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kub-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kub
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kub
    spec:
      containers:
        - name: kub
          image: nightvvolf/kub:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
