service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kub-service
spec:
  selector:
    app: kub
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
      nodePort: 31110
